@@ -1481,6 +1481,7 @@ sound{ id = "hookshot", description = "Empty sound" }
 sound{ id = "items/bomb", description = "Bomb" }
 sound{ id = "items/boomerang", description = "Boomerang" }
 sound{ id = "items/bow", description = "Bow" }
+sound{ id = "items/cane", description = "Cane" }
 sound{ id = "items/farore_wind/cast", description = "items/farore_wind/cast" }
 sound{ id = "items/fire_rod", description = "Shoot" }
 sound{ id = "items/hammer/heavy_block_hit", description = "Hammer Stake" }
@@ -1588,7 +1589,6 @@ item{ id = "_12", description = "Photos counter" }
 item{ id = "_13", description = "Photo" }
 item{ id = "_14", description = "Seashell" }
 item{ id = "_15", description = "Seashell counter" }
-item{ id = "_16", description = "Slim key" }
 item{ id = "_2", description = "Quest (Butter)" }
 item{ id = "_3", description = "Face key" }
 item{ id = "_4", description = "Golden leaf" }
@@ -2349,6 +2349,7 @@ file{ path = "shaders/power_effect.dat", author = "PhoenixII54", }
 file{ path = "shaders/radial_fade_out.dat", author = "PhoenixII54", }
 file{ path = "shaders/radial_fade_out.frag.glsl", author = "PhoenixII54", }
 file{ path = "shaders/starman.dat", author = "PhoenixII54", }
+file{ path = "sounds/items/cane.ogg", author = "Nintendo", license = "Proprietary" }
 file{ path = "sounds/timer.ogg", author = "Franck Jousseaume", license = "CC BY-SA 4.0" }
 file{ path = "sounds/timer_hurry.ogg", author = "Franck Jousseaume", license = "CC BY-SA 4.0" }
 file{ path = "sprites/enemies/boss/spectral_ganon.dat", author = "Nintendo, The Unknown", }
