@@ -387,6 +387,9 @@ Alpha 1.17 (started 03/05/23) "Needlefish Update":
 	ADD: Added boss names for their parchment.
 	ADD: Added a new clock HUD (#114, #200).
 	ADD: Added a chronometer HUD (#36).
+	ADD: Added healing wand variants (#194).
+	ADD: Added animations for all the rods (#220).
+	ADD: Added the missing items treasure and inventory dialogues (#9).
 	CHG: Redone Spectral Ganon's sprite (#29).
 	CHG: Changed Spectral Ganon's settings according to the sprite (#29).
 	CHG: Moved the green house in the east of the castle.
@@ -522,7 +525,6 @@ Alpha 1.17.1 (//23) "Needlefish Update":
 	TDO: Add hook entities to trees (#103). 
 	TDO: Finish the remaining houses (#104).
 	TDO: Add remaining inside maps coordinates (#105).
-	TDO: Add items treasure and inventory missing dialogues (#9).
 	TDO: Fix victory animation not being synchronised with Link movement (#10).
 	TDO: Clean up unused files (#98).
 	TDO: Update the title screen (#50).
